@@ -1,20 +1,0 @@
-/*-------------------------------------------------------------------------
- *
- *   FILE
- *	pqxx/trigger
- *
- *   DESCRIPTION
- *      Obsolete header from libpqxx 1.x/2.x.  Include notify-listen instead.
- *   pqxx::trigger was replaced with pqxx::notify_listener
- *
- * Copyright (c) 2001-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
- *
- * See COPYING for copyright license.  If you did not receive a file called
- * COPYING with this source code, please notify the distributor of this mistake,
- * or contact the author.
- *
- *-------------------------------------------------------------------------
- */
-// Actual definitions in .hxx file so editors and such recognize file type
-#include "pqxx/trigger.hxx"
-
